大文件上传，切片上传

--- a/interview/big_file_upload/package.json
+++ b/interview/big_file_upload/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fs-extra": "^8.1.0",
+    "multiparty": "^4.2.1"
+  }
 }
