--- a/vue/vue-orders/package.json
+++ b/vue/vue-orders/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "express": "^4.17.1",
     "mockjs": "^1.1.0",
+    "mongoose": "^5.9.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
