--- a/react/react_blog/blog/package.json
+++ b/react/react_blog/blog/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "antd": "3.9.0",
+    "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "markdown-navbar": "^1.4.1",
     "next": "9.3.6",
