--- a/react/react_blog/blog/package.json
+++ b/react/react_blog/blog/package.json
@@ -12,6 +12,7 @@
     "antd": "3.9.0",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "egg-cors": "^2.2.3",
     "highlight.js": "^10.0.3",
     "lodash": "^4.17.15",
     "markdown-navbar": "^1.4.1",
